--- a/WpfApplication1/WpfApplication1.csproj
+++ b/WpfApplication1/WpfApplication1.csproj
@@ -62,17 +62,18 @@
     <Compile Include="DataAccess\CustomerRepository.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="DataAccess\CustomerAddedEventArgs.cs" />
-    <Compile Include="ViewModel\AllCustomersViewModel.cs" />
+    <Compile Include="ViewModel\Stammdaten\Customer\AllCustomersViewModel.cs" />
     <Compile Include="ViewModel\CommandViewModel.cs" />
-    <Compile Include="ViewModel\CustomerViewModel.cs" />
+    <Compile Include="ViewModel\Stammdaten\Customer\CustomerViewModel.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
+    <Compile Include="ViewModel\Stammdaten\Product\ProductViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\WorkspaceViewModel.cs" />
-    <Compile Include="View\AllCustomersView.xaml.cs">
+    <Compile Include="View\Stammdaten\Customer\AllCustomersView.xaml.cs">
       <DependentUpon>AllCustomersView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\CustomersView.xaml.cs">
+    <Compile Include="View\Stammdaten\Customer\CustomersView.xaml.cs">
       <DependentUpon>CustomersView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
@@ -96,13 +97,13 @@
       <SubType>Designer</SubType>
       <ContainsDesignTimeResources>true</ContainsDesignTimeResources>
     </Page>
-    <Page Include="View\AllCustomersView.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="View\Stammdaten\Customer\AllCustomersView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\CustomersView.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="View\Stammdaten\Customer\CustomersView.xaml">
       <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
   <ItemGroup>
