--- a/WpfApplication1/FrontEnd.csproj
+++ b/WpfApplication1/FrontEnd.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,6 +61,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="DataAccess\CustomerRepository.cs" />
+    <Compile Include="Data\Channel\Channel.cs" />
     <Compile Include="Model\Customer.cs" />
     <Compile Include="DataAccess\CustomerAddedEventArgs.cs" />
     <Compile Include="ViewModel\Stammdaten\Customer\AllCustomersViewModel.cs" />
@@ -70,10 +72,10 @@
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\WorkspaceViewModel.cs" />
-    <Compile Include="View\Stammdaten\Customer\AllCustomersView.xaml.cs">
+    <Compile Include="Guis\Stammdaten\Customer\AllCustomersView.xaml.cs">
       <DependentUpon>AllCustomersView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Stammdaten\Customer\CustomersView.xaml.cs">
+    <Compile Include="Guis\Stammdaten\Customer\CustomersView.xaml.cs">
       <DependentUpon>CustomersView.xaml</DependentUpon>
     </Compile>
     <Page Include="MainWindow.xaml">
@@ -97,11 +99,11 @@
       <SubType>Designer</SubType>
       <ContainsDesignTimeResources>true</ContainsDesignTimeResources>
     </Page>
-    <Page Include="View\Stammdaten\Customer\AllCustomersView.xaml">
+    <Page Include="Guis\Stammdaten\Customer\AllCustomersView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\Stammdaten\Customer\CustomersView.xaml">
+    <Page Include="Guis\Stammdaten\Customer\CustomersView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -132,6 +134,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Data\customers.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BL\BL.csproj">
+      <Project>{77153938-B0A6-4104-AB87-9627E18B95D2}</Project>
+      <Name>BL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
