--- a/WpfApplication1/FrontEnd.csproj
+++ b/WpfApplication1/FrontEnd.csproj
@@ -67,8 +67,8 @@
       <DependentUpon>AllProductsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="DataAccess\CustomerAddedEventArgs.cs" />
-    <Compile Include="Model\Stammdaten\Customer.cs" />
-    <Compile Include="Model\Stammdaten\Product.cs" />
+    <Compile Include="Model\Stammdaten\CustomerModel.cs" />
+    <Compile Include="Model\Stammdaten\ProductModel.cs" />
     <Compile Include="ViewModel\Stammdaten\Customer\AllCustomersViewModel.cs" />
     <Compile Include="ViewModel\CommandViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\Customer\CustomerViewModel.cs" />
