--- a/WpfApplication1/FrontEnd.csproj
+++ b/WpfApplication1/FrontEnd.csproj
@@ -69,6 +69,7 @@
     <Compile Include="DataAccess\CustomerAddedEventArgs.cs" />
     <Compile Include="Model\Stammdaten\CustomerModel.cs" />
     <Compile Include="Model\Stammdaten\ProductModel.cs" />
+    <Compile Include="ViewModel\NavCommands\TreeViewCommands.cs" />
     <Compile Include="ViewModel\Stammdaten\Customer\AllCustomersViewModel.cs" />
     <Compile Include="ViewModel\CommandViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\Customer\CustomerViewModel.cs" />
