--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -49,9 +49,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DL\DL.csproj">
+    <ProjectReference Include="..\DL\Datenbank.csproj">
       <Project>{9E81901A-8B6D-408A-87C4-7494AA07E519}</Project>
-      <Name>DL</Name>
+      <Name>Datenbank</Name>
     </ProjectReference>
     <ProjectReference Include="..\Views\Views.csproj">
       <Project>{95F11D33-0FC5-4175-A9A0-20F7B1CC7083}</Project>
