--- a/DL/Datenbank.csproj
+++ b/DL/Datenbank.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{9E81901A-8B6D-408A-87C4-7494AA07E519}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DL</RootNamespace>
+    <RootNamespace>Database</RootNamespace>
     <AssemblyName>DS</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
