--- a/WpfApplication1/FrontEnd.csproj
+++ b/WpfApplication1/FrontEnd.csproj
@@ -60,15 +60,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="DataAccess\CustomerRepository.cs" />
-    <Compile Include="DataAccess\ProductRepository.cs" />
+    <Compile Include="DataAccess\Stammdaten\Customer\CustomerRepository.cs" />
+    <Compile Include="DataAccess\Stammdaten\Product\ProductRepository.cs" />
     <Compile Include="Data\Channel\Channel.cs" />
     <Compile Include="Guis\Stammdaten\Product\AllProductsView.xaml.cs">
       <DependentUpon>AllProductsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="DataAccess\CustomerAddedEventArgs.cs" />
+    <Compile Include="DataAccess\Stammdaten\Customer\CustomerAddedEventArgs.cs" />
+    <Compile Include="Guis\Stammdaten\User\UserView.xaml.cs">
+      <DependentUpon>UserView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Model\Stammdaten\CustomerModel.cs" />
     <Compile Include="Model\Stammdaten\ProductFactory.cs" />
+    <Compile Include="Model\Stammdaten\UserFactory.cs" />
     <Compile Include="ViewModel\NavCommands\TreeViewCommands.cs" />
     <Compile Include="ViewModel\Stammdaten\Customer\AllCustomersViewModel.cs" />
     <Compile Include="ViewModel\CommandViewModel.cs" />
@@ -76,6 +80,7 @@
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\Product\AllProductsViewModel.cs" />
     <Compile Include="ViewModel\Stammdaten\Product\ProductViewModel.cs" />
+    <Compile Include="ViewModel\Stammdaten\User\UserViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="ViewModel\WorkspaceViewModel.cs" />
@@ -86,6 +91,10 @@
       <DependentUpon>CustomersView.xaml</DependentUpon>
     </Compile>
     <Page Include="Guis\Stammdaten\Product\AllProductsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Guis\Stammdaten\User\UserView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -156,7 +165,9 @@
       <Name>Views</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DataAccess\Stammdaten\User\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
