Make ChannelFactory dynamisch und füge mache Userepository und Gui JEHAAAAAAA wuhuuu widr viel gschafft, und glernt. Als nöchsts:
ASYNCHRONITÄT JEHAAAA :D:D

--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="MerpDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Selections\Stammdaten\User\UserDataManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DL\Datenbank.csproj">
