--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -46,7 +46,10 @@
     <Compile Include="MerpBLManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service\IMERPService.cs" />
+    <Compile Include="Service\IRootInterface.cs" />
     <Compile Include="Service\MERPService.cs" />
+    <Compile Include="Service\Stammdaten\User\IUserService.cs" />
+    <Compile Include="Service\Stammdaten\User\UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAL\DAL.csproj">
