--- a/Host/app.config
+++ b/Host/app.config
@@ -14,6 +14,10 @@
       <service name="BL.Service.MERPService">
         <endpoint name="BL.Service.MERPService"  address="net.tcp://localhost:2526/Service/" binding="netTcpBinding" contract="BL.Service.IMERPService" />
       </service>
+      <service name="BL.Service.Stammdaten.User.UserService">
+        <endpoint name="BL.Service.Stammdaten.User.IUserService" address="net.tcp://localhost:2526/Service/Stammdaten/User" binding="netTcpBinding"
+contract="BL.Service.Stammdaten.User.IUserService" />
+      </service>
     </services>
   </system.serviceModel>
   <connectionStrings>
