--- a/Host/app.config
+++ b/Host/app.config
@@ -10,17 +10,39 @@
         </binding>
       </netTcpBinding>
     </bindings>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="Behaviour">
+          <serviceMetadata httpGetEnabled="true" />
+          <serviceCredentials>
+            <serviceCertificate findValue="ServiceCertificate" 
+                                x509FindType="FindBySubjectName" 
+                                storeLocation="CurrentUser" 
+                                storeName="TrustedPeople"/>
+            <userNameAuthentication userNamePasswordValidationMode="Custom"
+                                    customUserNamePasswordValidatorType="BL.PasswordValidator, Usernames"/>
+          </serviceCredentials>
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
     <services>
       <service name="BL.Service.MERPService">
-        <endpoint name="BL.Service.MERPService"  address="net.tcp://localhost:2526/Service/" binding="netTcpBinding" contract="BL.Service.IMERPService" />
+        <endpoint name="BL.Service.MERPService"  
+                  address="net.tcp://localhost:2526/Service/" 
+                  binding="netTcpBinding" 
+                  contract="BL.Service.IMERPService" />
       </service>
       <service name="BL.Service.Stammdaten.User.UserService">
-        <endpoint name="BL.Service.Stammdaten.User.IUserService" address="net.tcp://localhost:2526/Service/Stammdaten/User" binding="netTcpBinding"
-contract="BL.Service.Stammdaten.User.IUserService" />
+        <endpoint name="BL.Service.Stammdaten.User.IUserService" 
+                  address="net.tcp://localhost:2526/Service/Stammdaten/User" 
+                  binding="netTcpBinding"
+                  contract="BL.Service.Stammdaten.User.IUserService" />
       </service>
     </services>
   </system.serviceModel>
   <connectionStrings>
-    <add name="db_MERPEntities1" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=BISONWS1281\MSSQLDEV;Initial Catalog=db_MERP;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+    <add name="db_MERPEntities1" 
+         connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=BISONWS1281\MSSQLDEV;Initial Catalog=db_MERP;Integrated Security=True;MultipleActiveResultSets=True&quot;" 
+         providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
