--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -47,7 +47,7 @@
   <ItemGroup>
     <Compile Include="MerpDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Selections\Stammdaten\User\UserDataManager.cs" />
+    <Compile Include="Selections\Stammdaten\User\UserDataFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DL\Datenbank.csproj">
