--- a/Host/app.config
+++ b/Host/app.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <system.serviceModel>
-    <bindings>
+     <bindings>
       <netTcpBinding>
         <binding name="NetTcpBindingEndpointConfig">
           <security mode="Message">
@@ -11,38 +11,39 @@
       </netTcpBinding>
     </bindings>
     <behaviors>
-      <serviceBehaviors>
-        <behavior name="Behaviour">
-          <serviceMetadata httpGetEnabled="true" />
+      <serviceBehaviors >
+        <behavior name="MerpBehavior">
+          
           <serviceCredentials>
-            <serviceCertificate findValue="ServiceCertificate" 
-                                x509FindType="FindBySubjectName" 
-                                storeLocation="CurrentUser" 
-                                storeName="TrustedPeople"/>
+            <serviceCertificate findValue="SimiPro"
+                                x509FindType="FindBySubjectName"
+                                storeLocation="LocalMachine"
+                                storeName="My"/>
             <userNameAuthentication userNamePasswordValidationMode="Custom"
-                                    customUserNamePasswordValidatorType="BL.PasswordValidator, Usernames"/>
+                                    customUserNamePasswordValidatorType="BL.PasswordValidator, BL"/>
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <services>
-      <service name="BL.Service.MERPService">
-        <endpoint name="BL.Service.MERPService"  
-                  address="net.tcp://localhost:2526/Service/" 
-                  binding="netTcpBinding" 
+      <service behaviorConfiguration="MerpBehavior"
+                  name="BL.Service.MerpService">
+        <endpoint address="net.tcp://localhost:2526/Service/" 
+                  binding="netTcpBinding"
+                  name="MerpService" 
                   contract="BL.Service.IMERPService" />
       </service>
       <service name="BL.Service.Stammdaten.User.UserService">
-        <endpoint name="BL.Service.Stammdaten.User.IUserService" 
-                  address="net.tcp://localhost:2526/Service/Stammdaten/User" 
-                  binding="netTcpBinding"
+        <endpoint address="net.tcp://localhost:2526/Service/Stammdaten/User"
+                  binding="netTcpBinding" 
+                  name="UserService" 
                   contract="BL.Service.Stammdaten.User.IUserService" />
       </service>
     </services>
   </system.serviceModel>
   <connectionStrings>
-    <add name="db_MERPEntities1" 
-         connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=BISONWS1281\MSSQLDEV;Initial Catalog=db_MERP;Integrated Security=True;MultipleActiveResultSets=True&quot;" 
+    <add name="db_MERPEntities1"
+         connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=BISONWS1281\MSSQLDEV;Initial Catalog=db_MERP;Integrated Security=True;MultipleActiveResultSets=True&quot;"
          providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
