--- a/Host/app.config
+++ b/Host/app.config
@@ -13,12 +13,12 @@
     <behaviors>
       <serviceBehaviors >
         <behavior name="MerpBehavior">
-          
-          <serviceCredentials>
-            <serviceCertificate findValue="SimiPro"
+          <serviceMetadata httpGetEnabled="True" httpGetUrl="http://localhost:7777/httpGet" />
+                           <serviceCredentials>
+            <serviceCertificate findValue="SimiPro2"
                                 x509FindType="FindBySubjectName"
-                                storeLocation="LocalMachine"
-                                storeName="My"/>
+                                storeLocation="CurrentUser"
+                                storeName="TrustedPeople"/>
             <userNameAuthentication userNamePasswordValidationMode="Custom"
                                     customUserNamePasswordValidatorType="BL.PasswordValidator, BL"/>
           </serviceCredentials>
@@ -30,6 +30,7 @@
                   name="BL.Service.MerpService">
         <endpoint address="net.tcp://localhost:2526/Service/" 
                   binding="netTcpBinding"
+                  bindingConfiguration="NetTcpBindingEndpointConfig"
                   name="MerpService" 
                   contract="BL.Service.IMERPService" />
       </service>
