Versuch der perfekten Verbindung einzurichten

--- a/Host/app.config
+++ b/Host/app.config
@@ -32,7 +32,8 @@
                   binding="netTcpBinding"
                   bindingConfiguration="NetTcpBindingEndpointConfig"
                   name="MerpService" 
-                  contract="BL.Service.IMERPService" />
+                  contract="BL.Service.IMERPService"
+                  />
       </service>
       <service name="BL.Service.Stammdaten.User.UserService">
         <endpoint address="net.tcp://localhost:2526/Service/Stammdaten/User"
