--- a/Host/Host.csproj
+++ b/Host/Host.csproj
@@ -63,6 +63,8 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="CertifikatCreate.bat" />
+    <None Include="CertifikatDelete.bat" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
