--- a/Host/app.config
+++ b/Host/app.config
@@ -8,6 +8,11 @@
             <message clientCredentialType="UserName" />
           </security>
         </binding>
+        <binding name="NetTcpBindingEndpointConfig2" >
+          <security mode="Message">
+            <message clientCredentialType="UserName"/>
+          </security>
+        </binding>
       </netTcpBinding>
     </bindings>
     <behaviors>
@@ -23,22 +28,36 @@
                                     customUserNamePasswordValidatorType="BL.PasswordValidator, BL"/>
           </serviceCredentials>
         </behavior>
+        <behavior name="UserBehaviour">
+          <serviceMetadata httpGetEnabled="True" httpGetUrl="http://localhost:7778/httpGet" />
+          <serviceCredentials>
+            <serviceCertificate findValue="SimiPro2"
+                                x509FindType="FindBySubjectName"
+                                storeLocation="CurrentUser"
+                                storeName="TrustedPeople"/>
+            <userNameAuthentication userNamePasswordValidationMode="Custom"
+                                    customUserNamePasswordValidatorType="BL.PasswordValidator, BL"/>
+          </serviceCredentials>
+        </behavior>
       </serviceBehaviors>
     </behaviors>
     <services>
-      <service behaviorConfiguration="MerpBehavior"
-                  name="BL.Service.MerpService">
-        <endpoint address="net.tcp://localhost:2526/Service/" 
+      <service behaviorConfiguration="MerpBehavior" 
+               name="BL.Service.MerpService">
+
+        <endpoint address="net.tcp://localhost:2526/Service/"
                   binding="netTcpBinding"
                   bindingConfiguration="NetTcpBindingEndpointConfig"
-                  name="MerpService" 
-                  contract="BL.Service.IMERPService"
-                  />
+                  name="MerpEndpoint"
+                  contract="BL.Service.IMERPService" />
       </service>
-      <service name="BL.Service.Stammdaten.User.UserService">
+      <service behaviorConfiguration="UserBehaviour" 
+               name="BL.Service.Stammdaten.User.UserService">
+
         <endpoint address="net.tcp://localhost:2526/Service/Stammdaten/User"
-                  binding="netTcpBinding" 
-                  name="UserService" 
+                  binding="netTcpBinding"
+                  name="UserEndpoint"
+                  bindingConfiguration="NetTcpBindingEndpointConfig2"
                   contract="BL.Service.Stammdaten.User.IUserService" />
       </service>
     </services>
