--- a/WpfApplication1/App.config
+++ b/WpfApplication1/App.config
@@ -21,7 +21,6 @@
     <client>
 
       <endpoint
-                 
                   name="MerpService"
                   address="net.tcp://localhost:2526/Service/"
                   binding="netTcpBinding"
@@ -33,6 +32,7 @@
       </endpoint>
 
       <endpoint
+                  address="net.tcp://localhost:2526/Service/Stammdaten/User"
                   name="UserService"
                   bindingConfiguration="NetTcpBindingEndpointConfig"
                   binding="netTcpBinding"
