--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Connection\Connection.cs" />
     <Compile Include="Security\Connection\IConnection.cs" />
+    <Compile Include="Session.cs" />
     <Compile Include="Stammdaten\Product\ProductView.cs" />
     <Compile Include="Stammdaten\User\UserFactory.cs" />
     <Compile Include="Stammdaten\User\IUserView.cs" />
