Prov. Loginwindow eingebaut

--- a/Host/app.config
+++ b/Host/app.config
@@ -19,6 +19,7 @@
       <serviceBehaviors >
         <behavior name="MerpBehavior">
           <serviceMetadata httpGetEnabled="True" httpGetUrl="http://localhost:7777/httpGet" />
+          <serviceDebug includeExceptionDetailInFaults="true"/>
                            <serviceCredentials>
             <serviceCertificate findValue="SimiPro2"
                                 x509FindType="FindBySubjectName"
