--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -45,8 +45,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseFactory.cs" />
     <Compile Include="MerpDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Selections\ASelection.cs" />
+    <Compile Include="Selections\Stammdaten\Quattro\QuattroDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\User\UserDataFactory.cs" />
   </ItemGroup>
   <ItemGroup>
