--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -31,9 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="bbv.Common">
+      <HintPath>..\BBVCommon_bySelf\bbv.Common.dll</HintPath>
+    </Reference>
+    <Reference Include="bbv.Common.EventBroker, Version=7.1.0.0, Culture=neutral, PublicKeyToken=917bca444d1f2b4c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BBVCommon_bySelf\BBVCommon.Eventbroker\bbv.Common.EventBroker.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IdentityModel" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -46,12 +54,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Connection\Connection.cs" />
     <Compile Include="Security\Connection\IConnection.cs" />
+    <Compile Include="Security\ErrorException\LoginError.cs" />
     <Compile Include="Session.cs" />
     <Compile Include="Stammdaten\Product\ProductView.cs" />
-    <Compile Include="Stammdaten\User\UserFactory.cs" />
-    <Compile Include="Stammdaten\User\IUserView.cs" />
-    <Compile Include="Stammdaten\User\UserView.cs" />
+    <Compile Include="Stammdaten\Product\User\UserFactory.cs" />
+    <Compile Include="Stammdaten\Product\User\IUserView.cs" />
+    <Compile Include="Stammdaten\Product\User\UserView.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
