Add ProductMethods to View

--- a/BL/BL.csproj
+++ b/BL/BL.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Service\IRootInterface.cs" />
     <Compile Include="Service\MERPService.cs" />
     <Compile Include="Service\RootInterface.cs" />
+    <Compile Include="Service\Stammdaten\Product\IProductService.cs" />
     <Compile Include="Service\Stammdaten\User\IUserService.cs" />
     <Compile Include="Service\Stammdaten\User\UserService.cs" />
   </ItemGroup>
