--- a/Host/app.config
+++ b/Host/app.config
@@ -13,6 +13,11 @@
             <message clientCredentialType="UserName"/>
           </security>
         </binding>
+        <binding name="NetTcpBindingEndpointConfig3">
+          <security mode="Message">
+            <message clientCredentialType="UserName" />
+          </security>
+        </binding>
       </netTcpBinding>
     </bindings>
     <behaviors>
@@ -30,7 +35,18 @@
           </serviceCredentials>
         </behavior>
         <behavior name="UserBehaviour">
-          <serviceMetadata httpGetEnabled="True" httpGetUrl="http://localhost:7778/httpGet" />
+          <serviceMetadata httpGetEnabled="True" httpGetUrl="http://localhost:7778/httpGet/User" />
+          <serviceCredentials>
+            <serviceCertificate findValue="SimiPro2"
+                                x509FindType="FindBySubjectName"
+                                storeLocation="CurrentUser"
+                                storeName="TrustedPeople"/>
+            <userNameAuthentication userNamePasswordValidationMode="Custom"
+                                    customUserNamePasswordValidatorType="BL.PasswordValidator, BL"/>
+          </serviceCredentials>
+        </behavior>
+        <behavior name="ProductBehaviour">
+          <serviceMetadata httpGetEnabled="True" httpGetUrl="http://localhost:7778/httpGet/Product" />
           <serviceCredentials>
             <serviceCertificate findValue="SimiPro2"
                                 x509FindType="FindBySubjectName"
@@ -41,6 +57,7 @@
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
+      
     </behaviors>
     <services>
       <service behaviorConfiguration="MerpBehavior" 
@@ -60,6 +77,15 @@
                   name="UserEndpoint"
                   bindingConfiguration="NetTcpBindingEndpointConfig2"
                   contract="BL.Service.Stammdaten.User.IUserService" />
+      </service>
+      <service behaviorConfiguration="ProductBehaviour"
+         name="BL.Service.Stammdaten.Product.ProductService">
+
+        <endpoint address="net.tcp://localhost:2526/Service/Stammdaten/Product"
+                  binding="netTcpBinding"
+                  name="ProductEndpoint"
+                  bindingConfiguration="NetTcpBindingEndpointConfig3"
+                  contract="BL.Service.Stammdaten.Product.IProductService" />
       </service>
     </services>
   </system.serviceModel>
