--- a/WpfApplication1/App.config
+++ b/WpfApplication1/App.config
@@ -41,6 +41,17 @@
           <dns value="SimiPro2"/>
         </identity>
       </endpoint>
+      <endpoint
+             address="net.tcp://localhost:2526/Service/Stammdaten/Product"
+             name="ProductService"
+             bindingConfiguration="NetTcpBindingEndpointConfig"
+             binding="netTcpBinding"
+             contract="BL.Service.Stammdaten.Product.IProductService">
+       
+        <identity>
+          <dns value="SimiPro2"/>
+        </identity>
+      </endpoint>
     </client>
   </system.serviceModel>
 </configuration>
