--- a/Views/Views.csproj
+++ b/Views/Views.csproj
@@ -12,6 +12,10 @@
     <AssemblyName>Views</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <SccProjectName>Svn</SccProjectName>
+    <SccLocalPath>Svn</SccLocalPath>
+    <SccAuxPath>Svn</SccAuxPath>
+    <SccProvider>SubversionScc</SccProvider>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,11 +36,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="bbv.Common">
-      <HintPath>..\BBVCommon_bySelf\bbv.Common.dll</HintPath>
+      <HintPath>..\bbv.Common-7.0.1244.2228\bbv.Common\lib\Net40\bbv.Common.dll</HintPath>
     </Reference>
     <Reference Include="bbv.Common.EventBroker, Version=7.1.0.0, Culture=neutral, PublicKeyToken=917bca444d1f2b4c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\BBVCommon_bySelf\BBVCommon.Eventbroker\bbv.Common.EventBroker.dll</HintPath>
+      <HintPath>..\bbv.Common-7.0.1244.2228\bbv.Common.EventBroker\lib\Net40\bbv.Common.EventBroker.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
