For Access on DB

--- a/Trunk/WpfApplication1/App.config
+++ b/Trunk/WpfApplication1/App.config
@@ -20,17 +20,17 @@
     </behaviors>
     <client>
       <endpoint
-                  address= "net.tcp://localhost:2526/Service/UserService"
-                  name="UserService"
-                  bindingConfiguration="NetTcpBindingEndpointConfig"
-                  binding="netTcpBinding"
-                  contract="BL.Service.Stammdaten.User.IUserService">
+                address= "net.tcp://10.12.10.150:2526/Service/UserService"
+                name="UserService"
+                bindingConfiguration="NetTcpBindingEndpointConfig"
+                binding="netTcpBinding"
+                contract="BL.Service.Stammdaten.User.IUserService">
         <identity>
           <dns value="SimiPro2"/>
         </identity>
       </endpoint>
       <endpoint
-             address="net.tcp://localhost:2526/Service/ProductService"
+             address="net.tcp://10.12.10.150:2526/Service/ProductService"
              name="ProductService"
              bindingConfiguration="NetTcpBindingEndpointConfig"
              binding="netTcpBinding"
