Fixed Database Path, Add Customer things to Access Customer on DB

--- a/Trunk/DL/App.Config
+++ b/Trunk/DL/App.Config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings><add name="db_MERPEntities1" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=BISONWS1281\MSSQLDEV;Initial Catalog=db_MERP;Integrated Security=True;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="db_MERPEntities1" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=PCLAB0402;Initial Catalog=db_MERP;Persist Security Info=True;User ID=sa;Password=sql;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
-
