--- a/Trunk/DAL/DAL.csproj
+++ b/Trunk/DAL/DAL.csproj
@@ -53,6 +53,7 @@
     <Compile Include="MerpDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Selections\ASelection.cs" />
+    <Compile Include="Selections\Stammdaten\Customer\CustomerDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\Product\ProductDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\Quattro\QuattroDataFactory.cs" />
     <Compile Include="Selections\Stammdaten\User\UserDataFactory.cs" />
