--- a/Trunk/Host/app.config
+++ b/Trunk/Host/app.config
@@ -4,8 +4,7 @@
   
   
   <connectionStrings>
-    <add name="db_MERPEntities1"
-         connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=BISONWS1281\MSSQLDEV;Initial Catalog=db_MERP;Integrated Security=True;MultipleActiveResultSets=True&quot;"
-         providerName="System.Data.EntityClient" />
+  <add name="db_MERPEntities1" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=PCLAB0402;Initial Catalog=db_MERP;Persist Security Info=True;User ID=sa;Password=sql;MultipleActiveResultSets=True&quot;" providerName="System.Data.EntityClient" />
+
   </connectionStrings>
 </configuration>
